# mcstatus-http

./: Cargo.toml  Dockerfile  Justfile  rust-toolchain.toml
src/: main.rs
