[package]
name = "mcstatus-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["http2", "macros"] }
axum-macros = "0.4.1"
color-eyre = "0.6.2"
moka = { version = "0.12.4", features = ["future", "log", "logging"] }
parse_duration = "2.1.1"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full", "tracing"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
